[gd_scene load_steps=29 format=3 uid="uid://c0oxffugc611e"]

[ext_resource type="Texture2D" uid="uid://ciq8awnkh2l7r" path="res://assets/dan/sprite-sheet.png" id="1_avmt3"]
[ext_resource type="Script" path="res://scripts/player_running_state.gd" id="3_1rgpi"]
[ext_resource type="Script" path="res://classes/state_machine.gd" id="3_4f6te"]
[ext_resource type="Script" path="res://scripts/player_attacking_state.gd" id="4_1kgj8"]
[ext_resource type="Script" path="res://scripts/player_jumping_state.gd" id="5_qk8m1"]
[ext_resource type="Script" path="res://scripts/player_sliding_state.gd" id="6_uqauy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3nfcl"]
atlas = ExtResource("1_avmt3")
region = Rect2(115, 672, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ineai"]
atlas = ExtResource("1_avmt3")
region = Rect2(230, 672, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctgtu"]
atlas = ExtResource("1_avmt3")
region = Rect2(345, 672, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_f12ab"]
atlas = ExtResource("1_avmt3")
region = Rect2(0, 420, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_thaii"]
atlas = ExtResource("1_avmt3")
region = Rect2(0, 504, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_jumbd"]
atlas = ExtResource("1_avmt3")
region = Rect2(115, 504, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ri1v"]
atlas = ExtResource("1_avmt3")
region = Rect2(230, 504, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4di4"]
atlas = ExtResource("1_avmt3")
region = Rect2(0, 588, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydl0d"]
atlas = ExtResource("1_avmt3")
region = Rect2(0, 168, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_eugon"]
atlas = ExtResource("1_avmt3")
region = Rect2(115, 168, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_oofho"]
atlas = ExtResource("1_avmt3")
region = Rect2(230, 168, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_7egja"]
atlas = ExtResource("1_avmt3")
region = Rect2(345, 168, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6nnp"]
atlas = ExtResource("1_avmt3")
region = Rect2(460, 168, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq3nd"]
atlas = ExtResource("1_avmt3")
region = Rect2(575, 168, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_neleo"]
atlas = ExtResource("1_avmt3")
region = Rect2(690, 168, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_srd13"]
atlas = ExtResource("1_avmt3")
region = Rect2(805, 168, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_16u4h"]
atlas = ExtResource("1_avmt3")
region = Rect2(0, 1260, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vig4"]
atlas = ExtResource("1_avmt3")
region = Rect2(115, 1260, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynk0t"]
atlas = ExtResource("1_avmt3")
region = Rect2(230, 1260, 115, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_4joiq"]
atlas = ExtResource("1_avmt3")
region = Rect2(345, 1260, 115, 84)

[sub_resource type="SpriteFrames" id="SpriteFrames_3oa23"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nfcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ineai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctgtu")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f12ab")
}],
"loop": true,
"name": &"jump1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_thaii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jumbd")
}],
"loop": true,
"name": &"jump2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ri1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4di4")
}],
"loop": true,
"name": &"jump3",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydl0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eugon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oofho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7egja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6nnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq3nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neleo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srd13")
}],
"loop": true,
"name": &"run",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_16u4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vig4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynk0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4joiq")
}],
"loop": false,
"name": &"slide",
"speed": 24.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hgp7d"]
size = Vector2(20, 39.5)

[node name="Player" type="CharacterBody2D"]

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(5, 2)
sprite_frames = SubResource("SpriteFrames_3oa23")
animation = &"slide"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 11)
shape = SubResource("RectangleShape2D_hgp7d")
debug_color = Color(0.833614, 0.0013354, 0.937399, 0.42)

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="States" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("3_4f6te")
current_state = NodePath("Running")

[node name="Running" type="Node" parent="States" node_paths=PackedStringArray("actor")]
script = ExtResource("3_1rgpi")
actor = NodePath("../..")

[node name="Attacking" type="Node" parent="States"]
script = ExtResource("4_1kgj8")

[node name="Jumping" type="Node" parent="States" node_paths=PackedStringArray("actor")]
script = ExtResource("5_qk8m1")
actor = NodePath("../..")
jump_height = 100.0
jump_time_to_peak = 0.3
jump_time_to_descent = 0.4

[node name="Sliding" type="Node" parent="States"]
script = ExtResource("6_uqauy")

[connection signal="animation_finished" from="PlayerSprite" to="States/Attacking" method="_on_player_sprite_animation_finished"]
[connection signal="timeout" from="SlideTimer" to="States/Sliding" method="_on_slide_timer_timeout"]
